--- a/src/NotebookApp.css
+++ b/src/NotebookApp.css
@@ -20,3 +20,45 @@ button {
 	justify-content: center;
 	text-align: center;
 }
+
+.successMessage {
+	color: rgb(35, 176, 63);
+	font-weight: bold;
+	margin-bottom: 16px;
+}
+
+.errorMessage {
+	color: red;
+	font-weight: bold;
+	margin-bottom: 16px;
+}
+
+.loginRegisterContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin-top: 24px;
+}
+
+.logoutContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	margin-bottom: 16px;
+}
+
+.listTable {
+	text-align: start;
+	margin-bottom: 16px;
+}
+
+.listTable thead {
+	color: red;
+	font-weight: bold;
+}
+
+.listTable td {
+	padding-left: 36px;
+	padding-top: 8px;
+}
